--- a/navbar.scss
+++ b/navbar.scss
@@ -39,4 +39,8 @@ body {
 
 .navbar-default {
     background-color: #FFFFFF !important;
+    -webkit-box-shadow: 0px 2px 6px 0px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 2px 6px 0px rgba(0,0,0,1);
+    box-shadow: 0px 2px 6px 0px rgba(0,0,0,1);
+    border-radius: 2px;
 }
