--- a/tufte2.css
+++ b/tufte2.css
@@ -29,17 +29,18 @@
   font-style: normal; }
 
 /* Tufte CSS styles */
-/* line 16, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 18, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 html {
   font-size: 15px;
   text-rendering: optimizeLegibility; }
 
-/* line 21, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 23, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 body {
   color: rgba(0, 0, 0, 0.8);
-  counter-reset: sidenote-counter; }
+  counter-reset: sidenote-counter;
+  background-color: #EAEAE1 !important; }
 
-/* line 28, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 36, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h1 {
   font-family: "ff-tisa-web-pro", serif;
   font-weight: 400;
@@ -48,7 +49,7 @@ article h1 {
   font-size: 3.2rem;
   line-height: 1; }
 
-/* line 36, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 44, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h2 {
   font-family: "ff-tisa-web-pro", serif;
   font-style: italic;
@@ -57,7 +58,7 @@ article h2 {
   font-size: 2.2rem;
   line-height: 1; }
 
-/* line 44, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 52, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article h3 {
   font-family: "ff-tisa-web-pro", serif;
   font-style: italic;
@@ -66,7 +67,7 @@ article h3 {
   margin-top: 2.0rem;
   line-height: 1.23; }
 
-/* line 52, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 60, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article hr {
   display: block;
   height: 1px;
@@ -76,7 +77,7 @@ article hr {
   margin: 1em 0;
   padding: 0; }
 
-/* line 63, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 71, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 p.subtitle {
   font-style: italic;
   margin-top: 1rem;
@@ -85,34 +86,34 @@ p.subtitle {
   display: block;
   line-height: 1; }
 
-/* line 72, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 80, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .numeral {
   font-family: et-book-roman-old-style; }
 
-/* line 76, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 84, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .danger {
   color: red; }
 
-/* line 80, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 88, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   position: relative;
   padding: 5rem 0rem; }
 
-/* line 85, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 93, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 86, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 94, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 90, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 98, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul {
     font-size: 1.2rem; }
-  /* line 95, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 103, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     font-family: "ff-tisa-web-pro", serif !important;
     font-weight: 400;
@@ -121,39 +122,39 @@ article {
     margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 105, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 113, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 2.1rem; }
-  /* line 110, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 118, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 2.1rem; }
-  /* line 115, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 123, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 118, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 126, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 2.1rem;
     margin-bottom: 2.1rem; }
-  /* line 122, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 130, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 126, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 134, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 129, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 137, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 133, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 141, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 137, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 145, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 60%;
     margin-right: 40px; }
-  /* line 141, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 149, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 2.1rem;
     width: 60% !important;
@@ -161,16 +162,16 @@ article {
     text-align: right !important;
     font-family: "ff-tisa-web-pro", serif;
     color: inherit; }
-  /* line 149, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 157, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 155, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 163, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0; }
-  /* line 158, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 166, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -181,7 +182,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 2.1rem 0 2.1rem 0; }
-  /* line 169, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 177, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -192,17 +193,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 181, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 2.1rem; }
-  /* line 185, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 193, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 189, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 197, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 193, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 201, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -211,29 +212,20 @@ article {
     -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
     background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
     background-repeat: no-repeat, no-repeat, repeat-x;
-    text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 207, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 217, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 212, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 222, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article a:link::selection {
-    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-    background: #b4d5fe; }
-  /* line 218, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article a:link::-moz-selection {
-    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-    background: #b4d5fe; }
-  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 240, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 230, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -246,133 +238,133 @@ article {
     line-height: 1.3;
     vertical-align: baseline;
     position: relative; }
-  /* line 244, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 258, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 248, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 262, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 256, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 270, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 277, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 268, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 282, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 275, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 289, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article table {
     width: 65%; }
-  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 295, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 286, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 300, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 291, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 305, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 296, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 310, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
-    background-color: white; }
-  /* line 304, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    background-color: #EAEAE1 !important; }
+  /* line 323, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 308, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 327, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 314, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 319, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
     margin-top: 2.1rem;
     margin-left: 2.5%;
     border: none !important;
-    background-color: white;
+    background-color: #EAEAE1 !important;
     overflow-x: auto; }
-  /* line 329, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 353, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 333, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 357, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 343, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 367, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 347, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 351, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 375, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 @media (max-width: 760px) {
-  /* line 358, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 382, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   p,
   footer {
     width: 100%; }
-  /* line 362, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 386, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   pre.code {
     width: 97%; }
-  /* line 365, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 389, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   ul {
     width: 85%; }
-  /* line 368, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 392, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figure {
     max-width: 90%; }
-  /* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 395, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   figcaption,
   figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 376, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 400, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 380, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 404, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   blockquote p,
   blockquote footer {
     width: 100%; }
-  /* line 384, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 408, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 387, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 411, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .sidenote,
   .marginnote {
     display: none; }
-  /* line 391, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 415, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   .margin-toggle:checked + .sidenote,
   .margin-toggle:checked + .marginnote {
     display: block;
@@ -383,14 +375,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 402, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 426, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   label {
     cursor: pointer; }
-  /* line 405, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 429, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   div.table-wrapper,
   table {
     width: 85%; }
-  /* line 409, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 433, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   img {
     width: 100%; } }
 
