--- a/tufte2.scss
+++ b/tufte2.scss
@@ -8,6 +8,8 @@ $black: rgba(0,0,0,.8);
 $psize: 1.2rem;
 $ledding: 2.1rem;
 $fontweight: 400;
+$beigebg:'no';
+$beigecolorbg: #EAEAE1 !important;
 
 // 48.h1 33.h2 30.h3 27.subtitle 21.blockquote.p.newthought 16.5.footer 15.5.sidenote
 // 1.45 1.1 1.1 1.28 1.3 1
@@ -21,7 +23,13 @@ html {
 body {
     color: $black;
     counter-reset: sidenote-counter;
-//    background-color: #EAEAE1 !important;
+    
+    @if $beigebg == 'no' {
+        background-color: $beigecolorbg;
+    }
+    @else {
+        background-color: white;
+    }
 }
 
 article {
@@ -198,7 +206,9 @@ article {
         -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
         background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
         background-repeat: no-repeat, no-repeat, repeat-x;
-        text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+        @if $beigebg == 'yes' {
+            text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+        }
         background-position: 0% 93%, 100% 93%, 0% 93%;
     }
 }
@@ -211,13 +221,17 @@ article {
 
 article {
     a:link::selection {
-        text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-        background: #b4d5fe;
+        @if $beigebg == 'yes' {
+            text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+            background: #b4d5fe;
+        }
     }
 
     a:link::-moz-selection {
-        text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-        background: #b4d5fe;
+        @if $beigebg == 'yes' {
+            text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+            background: #b4d5fe;
+        }
     }
 
 
@@ -298,7 +312,12 @@ article {
         font-size: 1.0rem;
         line-height: 1.42;
         color: $black;
-        background-color: white;
+        @if $beigebg == 'no' {
+            background-color: $beigecolorbg;
+        }
+        @else {
+            background-color: white;
+        }
     }
 
     .sans > code {
@@ -322,7 +341,12 @@ article {
         margin-top: $ledding;
         margin-left: 2.5%;
         border:none !important;
-        background-color: white;
+        @if $beigebg == 'no' {
+            background-color: $beigecolorbg;
+        }
+        @else {
+            background-color: white;
+        }        
         overflow-x: auto;
     }
 
